--- a/etl.ipynb
+++ b/etl.ipynb
@@ -1106,7 +1106,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%run/etl.py"
+   ]
   }
  ],
  "metadata": {
