--- a/etl .ipynb
+++ b/etl .ipynb
@@ -18,6 +18,7 @@
    },
    "outputs": [],
    "source": [
+    "# import python packages\n",
     "import os\n",
     "import glob\n",
     "import psycopg2\n",
@@ -33,6 +34,7 @@
    },
    "outputs": [],
    "source": [
+    "# connect to the database\n",
     "conn = psycopg2.connect(\"host=127.0.0.1 dbname=sparkifydb user=student password=student\")\n",
     "cur = conn.cursor()"
    ]
@@ -46,6 +48,8 @@
    "outputs": [],
    "source": [
     "def get_files(filepath):\n",
+    "    \"\"\" read in all json files from a given filepath\n",
+    "        and return it as a dict\"\"\"\n",
     "    all_files = []\n",
     "    for root, dirs, files in os.walk(filepath):\n",
     "        files = glob.glob(os.path.join(root,'*.json'))\n",
@@ -61,13 +65,7 @@
     "editable": true
    },
    "source": [
-    "# Process `song_data`\n",
-    "In this first part, you'll perform ETL on the first dataset, `song_data`, to create the `songs` and `artists` dimensional tables.\n",
-    "\n",
-    "Let's perform ETL on a single song file and load a single record into each table to start.\n",
-    "- Use the `get_files` function provided above to get a list of all song JSON files in `data/song_data`\n",
-    "- Select the first song in this list\n",
-    "- Read the song file and view the data"
+    "# ETL `song_data`"
    ]
   },
   {
@@ -164,6 +162,7 @@
     }
    ],
    "source": [
+    "# create a pandas DataFrame from the json files\n",
     "df = pd.read_json(filepath, lines=True)\n",
     "df.head()"
    ]
@@ -174,12 +173,7 @@
     "editable": true
    },
    "source": [
-    "## #1: `songs` Table\n",
-    "#### Extract Data for Songs Table\n",
-    "- Select columns for song ID, title, artist ID, year, and duration\n",
-    "- Use `df.values` to select just the values from the dataframe\n",
-    "- Index to select the first (only) record in the dataframe\n",
-    "- Convert the array to a list and set it to `song_data`"
+    "## 1: `songs` Table"
    ]
   },
   {
@@ -201,19 +195,10 @@
     }
    ],
    "source": [
+    "# Select the columns for the songs table and convert the values to a list\n",
     "song_data = df[['song_id', 'title', 'artist_id', 'year', 'duration']].values.tolist()\n",
     "song_data = song_data[0]\n",
     "song_data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "#### Insert Record into Song Table\n",
-    "Implement the `song_table_insert` query in `sql_queries.py` and run the cell below to insert a record for this song into the `songs` table. Remember to run `create_tables.py` before running the cell below to ensure you've created/resetted the `songs` table in the sparkify database."
    ]
   },
   {
@@ -224,6 +209,7 @@
    },
    "outputs": [],
    "source": [
+    "# call the insert statement from sqlquery.py and insert the song_data into songs table\n",
     "cur.execute(song_table_insert, song_data)\n",
     "conn.commit()"
    ]
@@ -234,21 +220,7 @@
     "editable": true
    },
    "source": [
-    "Run `test.ipynb` to see if you've successfully added a record to this table."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "## #2: `artists` Table\n",
-    "#### Extract Data for Artists Table\n",
-    "- Select columns for artist ID, name, location, latitude, and longitude\n",
-    "- Use `df.values` to select just the values from the dataframe\n",
-    "- Index to select the first (only) record in the dataframe\n",
-    "- Convert the array to a list and set it to `artist_data`"
+    "## 2: `artists` Table"
    ]
   },
   {
@@ -270,18 +242,9 @@
     }
    ],
    "source": [
+    "# Select the columns for the artist table and convert the values to a list\n",
     "artist_data = df[['artist_id', 'artist_name', 'artist_location', 'artist_latitude', 'artist_longitude']].values[0].tolist()\n",
     "artist_data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "#### Insert Record into Artist Table\n",
-    "Implement the `artist_table_insert` query in `sql_queries.py` and run the cell below to insert a record for this song's artist into the `artists` table. Remember to run `create_tables.py` before running the cell below to ensure you've created/resetted the `artists` table in the sparkify database."
    ]
   },
   {
@@ -292,6 +255,7 @@
    },
    "outputs": [],
    "source": [
+    "# call the insert statement from sqlquery.py and insert the artist_data into artist table\n",
     "cur.execute(artist_table_insert, artist_data)\n",
     "conn.commit()"
    ]
@@ -302,22 +266,7 @@
     "editable": true
    },
    "source": [
-    "Run `test.ipynb` to see if you've successfully added a record to this table."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "# Process `log_data`\n",
-    "In this part, you'll perform ETL on the second dataset, `log_data`, to create the `time` and `users` dimensional tables, as well as the `songplays` fact table.\n",
-    "\n",
-    "Let's perform ETL on a single log file and load a single record into each table.\n",
-    "- Use the `get_files` function provided above to get a list of all log JSON files in `data/log_data`\n",
-    "- Select the first log file in this list\n",
-    "- Read the log file and view the data"
+    "# ETL `log_data`"
    ]
   },
   {
@@ -328,6 +277,7 @@
    },
    "outputs": [],
    "source": [
+    "# Read the log data \n",
     "log_files = get_files('data/log_data')"
    ]
   },
@@ -543,6 +493,7 @@
     }
    ],
    "source": [
+    "# create a pandas DataFrame from the json files\n",
     "df = pd.read_json(filepath, lines=True)\n",
     "df.head()"
    ]
@@ -553,15 +504,7 @@
     "editable": true
    },
    "source": [
-    "## #3: `time` Table\n",
-    "#### Extract Data for Time Table\n",
-    "- Filter records by `NextSong` action\n",
-    "- Convert the `ts` timestamp column to datetime\n",
-    "  - Hint: the current timestamp is in milliseconds\n",
-    "- Extract the timestamp, hour, day, week of year, month, year, and weekday from the `ts` column and set `time_data` to a list containing these values in order\n",
-    "  - Hint: use pandas' [`dt` attribute](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.dt.html) to access easily datetimelike properties.\n",
-    "- Specify labels for these columns and set to `column_labels`\n",
-    "- Create a dataframe, `time_df,` containing the time data for this file by combining `column_labels` and `time_data` into a dictionary and converting this into a dataframe"
+    "## 3: `time` Table"
    ]
   },
   {
@@ -765,6 +708,7 @@
     }
    ],
    "source": [
+    "# Filter the dataframe page-column by Nextsong\n",
     "df = df[df['page'] == 'NextSong']\n",
     "df.head()"
    ]
@@ -793,6 +737,7 @@
     }
    ],
    "source": [
+    "# extract values from the ts-column and convert it to datetime format\n",
     "t = pd.to_datetime(df['ts'],unit='ms')\n",
     "t.head()"
    ]
@@ -813,7 +758,9 @@
     }
    ],
    "source": [
+    "# extract values from ts-column and t dataframe convert it to list \n",
     "time_data = [df['ts'].values.tolist(),t.dt.hour.values.tolist(),t.dt.day.values.tolist(),t.dt.week.values.tolist(),t.dt.month.values.tolist(),t.dt.year.values.tolist(),t.dt.weekday_name.values.tolist()]\n",
+    "# set new column lables\n",
     "column_labels = ('start_time','hour','day','week_of_year','month','year','weekday')\n",
     "print(column_labels)"
    ]
@@ -925,18 +872,9 @@
     }
    ],
    "source": [
+    "# combine time_data and column_lables to a new DataFrame named time_df\n",
     "time_df = pd.DataFrame(dict(zip(column_labels, time_data)))\n",
     "time_df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "#### Insert Records into Time Table\n",
-    "Implement the `time_table_insert` query in `sql_queries.py` and run the cell below to insert records for the timestamps in this log file into the `time` table. Remember to run `create_tables.py` before running the cell below to ensure you've created/resetted the `time` table in the sparkify database."
    ]
   },
   {
@@ -947,6 +885,7 @@
    },
    "outputs": [],
    "source": [
+    "# call the insert statement from sqlquery.py and insert the df_time into time table\n",
     "for i, row in time_df.iterrows():\n",
     "    cur.execute(time_table_insert, list(row))\n",
     "    conn.commit()"
@@ -958,18 +897,7 @@
     "editable": true
    },
    "source": [
-    "Run `test.ipynb` to see if you've successfully added records to this table."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "## #4: `users` Table\n",
-    "#### Extract Data for Users Table\n",
-    "- Select columns for user ID, first name, last name, gender and level and set to `user_df`"
+    "## 4: `users` Table"
    ]
   },
   {
@@ -1067,18 +995,9 @@
     }
    ],
    "source": [
+    "# extract columns for the user table\n",
     "user_df = df[['userId', 'firstName', 'lastName', 'gender', 'level']]\n",
     "user_df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "#### Insert Records into Users Table\n",
-    "Implement the `user_table_insert` query in `sql_queries.py` and run the cell below to insert records for the users in this log file into the `users` table. Remember to run `create_tables.py` before running the cell below to ensure you've created/resetted the `users` table in the sparkify database."
    ]
   },
   {
@@ -1089,6 +1008,7 @@
    },
    "outputs": [],
    "source": [
+    "# call the insert statement from sqlquery.py and insert the user_df into user table\n",
     "for i, row in user_df.iterrows():\n",
     "    cur.execute(user_table_insert, list(row))\n",
     "    conn.commit()"
@@ -1100,23 +1020,7 @@
     "editable": true
    },
    "source": [
-    "Run `test.ipynb` to see if you've successfully added records to this table."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "## #5: `songplays` Table\n",
-    "#### Extract Data and Songplays Table\n",
-    "This one is a little more complicated since information from the songs table, artists table, and original log file are all needed for the `songplays` table. Since the log file does not specify an ID for either the song or the artist, you'll need to get the song ID and artist ID by querying the songs and artists tables to find matches based on song title, artist name, and song duration time.\n",
-    "- Implement the `song_select` query in `sql_queries.py` to find the song ID and artist ID based on the title, artist name, and duration of a song.\n",
-    "- Select the timestamp, user ID, level, song ID, artist ID, session ID, location, and user agent and set to `songplay_data`\n",
-    "\n",
-    "#### Insert Records into Songplays Table\n",
-    "- Implement the `songplay_table_insert` query and run the cell below to insert records for the songplay actions in this log file into the `songplays` table. Remember to run `create_tables.py` before running the cell below to ensure you've created/resetted the `songplays` table in the sparkify database."
+    "## #5: `songplays` Table"
    ]
   },
   {
@@ -1137,38 +1041,10 @@
     "    else:\n",
     "        songid, artistid = None, None\n",
     "\n",
-    "    #insert songplay record\n",
+    "    ## call the insert statement from sqlquery.py and insert the songplay_data into songplays table\n",
     "    songplay_data = (index, row.ts, row.userId, row.level, songid, artistid, row.sessionId, row.location, row.userAgent)\n",
     "    cur.execute(songplay_table_insert, songplay_data)\n",
     "    conn.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(results)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "editable": true
-   },
-   "source": [
-    "Run `test.ipynb` to see if you've successfully added records to this table."
    ]
   },
   {
