--- a/etl.ipynb
+++ b/etl.ipynb
@@ -7,6 +7,7 @@
    },
    "source": [
     "# ETL Processes\n",
+    "Use this notebook to develop the ETL process for each of your tables before completing the `etl.py` file to load the whole datasets."
    ]
   },
   {
@@ -17,7 +18,7 @@
    },
    "outputs": [],
    "source": [
-    "# import python packages\n",
+    "# import python librays\n",
     "import os\n",
     "import glob\n",
     "import psycopg2\n",
@@ -46,9 +47,8 @@
    },
    "outputs": [],
    "source": [
+    "# function to load the json files\n",
     "def get_files(filepath):\n",
-    "    \"\"\" read in all json files from a given filepath\n",
-    "        and return it as a dict\"\"\"\n",
     "    all_files = []\n",
     "    for root, dirs, files in os.walk(filepath):\n",
     "        files = glob.glob(os.path.join(root,'*.json'))\n",
@@ -64,7 +64,7 @@
     "editable": true
    },
    "source": [
-    "# ETL `song_data`"
+    "# ETL Process `song_data`"
    ]
   },
   {
@@ -75,6 +75,7 @@
    },
    "outputs": [],
    "source": [
+    "# call the get_files function and load the song data as song_files\n",
     "song_files = get_files(\"data/song_data\")"
    ]
   },
@@ -86,6 +87,7 @@
    },
    "outputs": [],
    "source": [
+    "# select the first json file from the dataset\n",
     "filepath = song_files[0]"
    ]
   },
@@ -161,7 +163,7 @@
     }
    ],
    "source": [
-    "# create a pandas DataFrame from the json files\n",
+    "# read in the filepath and convert it to a pandas dataframe\n",
     "df = pd.read_json(filepath, lines=True)\n",
     "df.head()"
    ]
@@ -172,7 +174,7 @@
     "editable": true
    },
    "source": [
-    "## 1: `songs` Table"
+    "## #1: `songs` Table"
    ]
   },
   {
@@ -194,10 +196,18 @@
     }
    ],
    "source": [
-    "# Select the columns for the songs table and convert the values to a list\n",
-    "song_data = df[['song_id', 'title', 'artist_id', 'year', 'duration']].values.tolist()\n",
-    "song_data = song_data[0]\n",
+    "# select the song values that we need from the dataframe\n",
+    "song_data = df[['song_id', 'title', 'artist_id', 'year', 'duration']].values[0].tolist()\n",
     "song_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Insert Record into Song Table"
    ]
   },
   {
@@ -208,7 +218,7 @@
    },
    "outputs": [],
    "source": [
-    "# call the insert statement from sqlquery.py and insert the song_data into songs table\n",
+    "# insert the song values into the database(song table)\n",
     "cur.execute(song_table_insert, song_data)\n",
     "conn.commit()"
    ]
@@ -219,7 +229,7 @@
     "editable": true
    },
    "source": [
-    "## 2: `artists` Table"
+    "## #2: `artists` Table"
    ]
   },
   {
@@ -241,9 +251,18 @@
     }
    ],
    "source": [
-    "# Select the columns for the artist table and convert the values to a list\n",
+    "# select the artist values that we need from the dataframe\n",
     "artist_data = df[['artist_id', 'artist_name', 'artist_location', 'artist_latitude', 'artist_longitude']].values[0].tolist()\n",
     "artist_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Insert Record into Artist Table"
    ]
   },
   {
@@ -254,7 +273,7 @@
    },
    "outputs": [],
    "source": [
-    "# call the insert statement from sqlquery.py and insert the artist_data into artist table\n",
+    "# insert the artist values into the database(artist table)\n",
     "cur.execute(artist_table_insert, artist_data)\n",
     "conn.commit()"
    ]
@@ -265,7 +284,7 @@
     "editable": true
    },
    "source": [
-    "# ETL `log_data`"
+    "# ETL Process `log_data`"
    ]
   },
   {
@@ -276,8 +295,8 @@
    },
    "outputs": [],
    "source": [
-    "# Read the log data \n",
-    "log_files = get_files('data/log_data')"
+    "# call the get_files function and load the log_data as log_files\n",
+    "log_files = get_files(\"data/log_data\")"
    ]
   },
   {
@@ -288,6 +307,7 @@
    },
    "outputs": [],
    "source": [
+    "# select the first json file from the dataset\n",
     "filepath = log_files[0]"
    ]
   },
@@ -492,7 +512,7 @@
     }
    ],
    "source": [
-    "# create a pandas DataFrame from the json files\n",
+    "# read in the filepath and convert it to a pandas dataframe\n",
     "df = pd.read_json(filepath, lines=True)\n",
     "df.head()"
    ]
@@ -503,7 +523,7 @@
     "editable": true
    },
    "source": [
-    "## 3: `time` Table"
+    "## #3: `time` Table"
    ]
   },
   {
@@ -707,7 +727,7 @@
     }
    ],
    "source": [
-    "# Filter the dataframe page-column by Nextsong\n",
+    "# filter the dataframe by the column page = NextSong\n",
     "df = df[df['page'] == 'NextSong']\n",
     "df.head()"
    ]
@@ -736,7 +756,7 @@
     }
    ],
    "source": [
-    "# extract values from the ts-column and convert it to datetime format\n",
+    "# convert the ts column to pandas datetime datatype\n",
     "t = pd.to_datetime(df['ts'],unit='ms')\n",
     "t.head()"
    ]
@@ -747,21 +767,11 @@
    "metadata": {
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('start_time', 'hour', 'day', 'week_of_year', 'month', 'year', 'weekday')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# extract values from ts-column and t dataframe convert it to list \n",
+    "# select the time values that we need and named new columns\n",
     "time_data = [df['ts'].values.tolist(),t.dt.hour.values.tolist(),t.dt.day.values.tolist(),t.dt.week.values.tolist(),t.dt.month.values.tolist(),t.dt.year.values.tolist(),t.dt.weekday_name.values.tolist()]\n",
-    "# set new column lables\n",
-    "column_labels = ('start_time','hour','day','week_of_year','month','year','weekday')\n",
-    "print(column_labels)"
+    "column_labels = ('start_time','hour','day','week_of_year','month','year','weekday')"
    ]
   },
   {
@@ -871,9 +881,18 @@
     }
    ],
    "source": [
-    "# combine time_data and column_lables to a new DataFrame named time_df\n",
+    "# convert the time values and the columnnames to a new pandas dataframe named time_df\n",
     "time_df = pd.DataFrame(dict(zip(column_labels, time_data)))\n",
     "time_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Insert Records into Time Table"
    ]
   },
   {
@@ -884,7 +903,7 @@
    },
    "outputs": [],
    "source": [
-    "# call the insert statement from sqlquery.py and insert the df_time into time table\n",
+    "# insert the values from the time_df into the database(time table)\n",
     "for i, row in time_df.iterrows():\n",
     "    cur.execute(time_table_insert, list(row))\n",
     "    conn.commit()"
@@ -896,7 +915,7 @@
     "editable": true
    },
    "source": [
-    "## 4: `users` Table"
+    "## #4: `users` Table"
    ]
   },
   {
@@ -994,9 +1013,18 @@
     }
    ],
    "source": [
-    "# extract columns for the user table\n",
+    "# select the user values that we need from the dataframe\n",
     "user_df = df[['userId', 'firstName', 'lastName', 'gender', 'level']]\n",
     "user_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "#### Insert Records into Users Table"
    ]
   },
   {
@@ -1007,7 +1035,7 @@
    },
    "outputs": [],
    "source": [
-    "# call the insert statement from sqlquery.py and insert the user_df into user table\n",
+    "# insert the user values into the database(user table)\n",
     "for i, row in user_df.iterrows():\n",
     "    cur.execute(user_table_insert, list(row))\n",
     "    conn.commit()"
@@ -1019,7 +1047,9 @@
     "editable": true
    },
    "source": [
-    "## #5: `songplays` Table"
+    "## #5: `songplays` Table\n",
+    "\n",
+    "#### Insert Records into Songplays Table"
    ]
   },
   {
@@ -1035,12 +1065,13 @@
     "    # get songid and artistid from song and artist tables\n",
     "    cur.execute(song_select, (row.song, row.artist, row.length))\n",
     "    results = cur.fetchone()\n",
+    "    \n",
     "    if results:\n",
     "        songid, artistid = results\n",
     "    else:\n",
     "        songid, artistid = None, None\n",
-    "\n",
-    "    ## call the insert statement from sqlquery.py and insert the songplay_data into songplays table\n",
+    "    \n",
+    "    #insert songplay record\n",
     "    songplay_data = (index, row.ts, row.userId, row.level, songid, artistid, row.sessionId, row.location, row.userAgent)\n",
     "    cur.execute(songplay_table_insert, songplay_data)\n",
     "    conn.commit()"
@@ -1063,6 +1094,7 @@
    },
    "outputs": [],
    "source": [
+    "# close the connection to the database\n",
     "conn.close()"
    ]
   },
@@ -1083,9 +1115,7 @@
     "editable": true
    },
    "outputs": [],
-   "source": [
-    "%run etl.py"
-   ]
+   "source": []
   }
  ],
  "metadata": {
